--- a/Info.plist
+++ b/Info.plist
@@ -4,6 +4,6 @@
 <plist version="1.0">
 <dict>
     <key>CFBundleName</key>
-    <string>MySimpleApp</string>
+    <string>iosChallenge</string>
 </dict>
 </plist>
