--- a/Info.plist
+++ b/Info.plist
@@ -3,7 +3,43 @@
  "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <!-- App Identity -->
+    <key>CFBundleIdentifier</key>
+    <string>com.example.iosChallenge</string>
     <key>CFBundleName</key>
     <string>iosChallenge</string>
+    <key>CFBundleDisplayName</key>
+    <string>iosChallenge</string>
+
+    <!-- App Version -->
+    <key>CFBundleShortVersionString</key>
+    <string>1.0.0</string>
+    <key>CFBundleVersion</key>
+    <string>1</string>
+
+    <!-- App Permissions -->
+    <!-- <key>NSCameraUsageDescription</key>
+    <string>This app requires access to the camera for scanning QR codes.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app requires access to the photo library to save images.</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>This app requires access to your location to provide location-based services.</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>This app requires access to your location even when the app is in the background.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>This app requires access to your location even when the app is in the background.</string>
+    <key>NSBluetoothAlwaysUsageDescription</key>
+    <string>This app requires access to Bluetooth for connecting to devices.</string>
+    <key>NSBluetoothPeripheralUsageDescription</key>
+    <string>This app requires access to Bluetooth for connecting to devices.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>This app requires access to the microphone for recording audio.</string> -->
+
+    <!-- Main Interface -->
+    <key>UILaunchStoryboardName</key>
+    <string>LaunchScreen</string>
+    <key>UIMainStoryboardFile</key>
+    <string>Main</string>
+    
 </dict>
 </plist>
