--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,10 @@ jobs:
         run: |
           xcodegen
 
+      - name: 🧹 Clean derived data
+        run: |
+          rm -rf ~/Library/Developer/Xcode/DerivedData
+
       - name: 🧪 Build iOS app (simulator)
         run: |
           xcodebuild clean build \
