--- a/project.yml
+++ b/project.yml
@@ -25,3 +25,6 @@ targets:
       base:
         CURRENT_PROJECT_VERSION: 1
         MARKETING_VERSION: 1.0.0
+        CODE_SIGN_STYLE: Manual
+        CODE_SIGNING_REQUIRED: NO
+        CODE_SIGNING_ALLOWED: NO
