--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,12 +49,14 @@ jobs:
             -sdk iphonesimulator \
             -destination 'platform=iOS Simulator,name=iPhone 14,OS=latest' \
             -configuration Debug \
+            -derivedDataPath build_output \
             CODE_SIGNING_ALLOWED=NO
 
-      - name: 📦 Export .app bundle
-        run: |
-          mkdir -p build_artifacts
-          cp -R ~/Library/Developer/Xcode/DerivedData/*/Build/Products/Debug-iphonesimulator/*.app build_artifacts/
+      - name: 📤 Upload .app
+        uses: actions/upload-artifact@v4
+        with:
+          name: ios-app
+          path: build_output/Build/Products/Debug-iphonesimulator/*.app
 
       - name: 📤 Upload build artifact
         uses: actions/upload-artifact@v4
