--- a/project.yml
+++ b/project.yml
@@ -28,3 +28,4 @@ targets:
         CODE_SIGN_STYLE: Manual
         CODE_SIGNING_REQUIRED: NO
         CODE_SIGNING_ALLOWED: NO
+        ONLY_ACTIVE_ARCH: NO
