--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -2,9 +2,9 @@ name: 🛠 iOS CI Build
 
 on:
   push:
-    branches: [master]
+    branches: [develop]
   pull_request:
-    branches: [master]
+    branches: [develop]
 
 jobs:
   build-ios:
@@ -26,6 +26,9 @@ jobs:
       - name: 🍺 Install dependencies
         run: |
           brew install xcodegen swiftlint
+
+      - name: 📦 Resolve Swift Package Manager dependencies
+        run: swift package resolve
 
       - name: 🧰 Restore Xcode derived data cache
         uses: actions/cache@v3
@@ -56,11 +59,8 @@ jobs:
       - name: 🔖 Set app version and build number
         run: |
           echo "BUILD_NUMBER=$(git rev-list --count HEAD)" >> $GITHUB_ENV
-          echo "BUILD_VERSION=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
+          echo "BUILD_BRANCH=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
           echo "GIT_SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-          echo $BUILD_NUMBER
-          echo $BUILD_VERSION
-          echo $GIT_SHORT_SHA
 
       - name: 🧪 Build app for iOS Simulator
         run: |
@@ -76,7 +76,7 @@ jobs:
 
       - name: 🏗 Rename output .app
         run: |
-          OUTPUT_NAME="iosChallenge-1.0.0-${GIT_SHORT_SHA}.app"
+          OUTPUT_NAME="iosChallenge-${BUILD_NUMBER}.0.0-${GIT_SHORT_SHA}.app"
           mv build_output/Build/Products/Debug-iphonesimulator/iosChallenge.app \
             build_output/Build/Products/Debug-iphonesimulator/$OUTPUT_NAME
 
