--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -1,5 +1,8 @@
 name: 🛠 iOS CI Build
 
+permissions:
+  contents: write
+
 on:
   push:
     branches: [develop]
@@ -69,10 +72,13 @@ jobs:
 
       - name: 🏷️ Create Git Tag
         if: github.event_name == 'push'
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
           git tag $NEW_TAG
+          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git
           git push origin $NEW_TAG
 
       - name: 🏗 Rename output .app
